<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_company_name"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:id="@+id/company_name_edt"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_country_name"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:id="@+id/country_dropdown_edt"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"
                android:clickable="true"
                android:focusable="false"
                android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_company_url"
            android:textColor="@color/black_color"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:id="@+id/company_url_edt"
            android:inputType="textUri"
            tools:ignore="Autofill"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:background="@drawable/select_image_button"
            android:textColor="@color/white_color"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_margin="8dp"
            android:id="@+id/company_logo_btn"
            tools:ignore="ButtonStyle"
            android:layout_gravity="center"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:id="@+id/company_logo_image_view"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription"
            />

    </LinearLayout>

</LinearLayout>