<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_make_name"
                    android:textColor="@color/black_color"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:id="@+id/make_name_drop_down"
                    android:inputType="textCapSentences"
                    tools:ignore="Autofill"
                    android:clickable="true"
                    android:focusable="false"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_year"
                    android:textColor="@color/black_color"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:id="@+id/year_name_drop_down"
                    android:inputType="textCapSentences"
                    tools:ignore="Autofill"
                    android:clickable="true"
                    android:focusable="false"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_side"
                    android:textColor="@color/black_color"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:id="@+id/side_name_drop_down"
                    android:inputType="textCapSentences"
                    tools:ignore="Autofill"
                    android:clickable="true"
                    android:focusable="false"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_group"
                    android:textColor="@color/black_color"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:layout_margin="8dp"
                    android:id="@+id/group_name_drop_down"
                    android:inputType="textCapSentences"
                    tools:ignore="Autofill"
                    android:clickable="true"
                    android:focusable="false"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_item_name"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:id="@+id/item_name_edt"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_item_description"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:id="@+id/item_description_edt"
                android:inputType="textCapSentences"
                tools:ignore="Autofill"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_item_price"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:id="@+id/item_price_edt"
                android:inputType="number"
                tools:ignore="Autofill"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_item_video_url"
                android:textColor="@color/black_color"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:id="@+id/item_video_url_edt"
                android:inputType="textUri"
                tools:ignore="Autofill"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="@string/image_1"
                android:padding="8dp"
                android:id="@+id/image_1_image"
                android:scaleType="fitCenter"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="@string/image_2"
                android:padding="8dp"
                android:id="@+id/image_2_image"
                android:scaleType="fitCenter"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:background="@drawable/select_image_button"
                android:textColor="@color/white_color"
                android:textSize="18sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_margin="8dp"
                android:id="@+id/image_1_btn"
                tools:ignore="ButtonStyle"
                />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:background="@drawable/select_image_button"
                android:textColor="@color/white_color"
                android:textSize="18sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_margin="8dp"
                android:id="@+id/image_2_btn"
                tools:ignore="ButtonStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="@string/image_1"
                android:padding="8dp"
                android:id="@+id/image_3_image"
                android:scaleType="fitCenter"
                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="@string/image_2"
                android:padding="8dp"
                android:id="@+id/image_4_image"
                android:scaleType="fitCenter"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:background="@drawable/select_image_button"
                android:textColor="@color/white_color"
                android:textSize="18sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_margin="8dp"
                android:id="@+id/image_3_btn"
                tools:ignore="ButtonStyle"
                />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:background="@drawable/select_image_button"
                android:textColor="@color/white_color"
                android:textSize="18sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_margin="8dp"
                android:id="@+id/image_4_btn"
                tools:ignore="ButtonStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="@string/image_1"
                android:padding="8dp"
                android:id="@+id/image_5_image"
                android:scaleType="fitCenter"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_image"
                android:background="@drawable/select_image_button"
                android:textColor="@color/white_color"
                android:textSize="18sp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_margin="8dp"
                android:id="@+id/image_5_btn"
                tools:ignore="ButtonStyle"
                />

        </LinearLayout>

        <Button
            android:id="@+id/item_master_new_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/login_button"
            android:text="@string/submit"
            android:textColor="#fff"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>